Patient and Pages api related change
